# pyarcparam

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md
examples/: eeglab_set_example.py  quickstart.py
src/pyarcparam/: __init__.py  analyze.py  arc.py  decompose.py  fitting.py  gfp.py  io.py  labels.py  models.py  peaks.py  plotting.py
tests/: _fixtures.py  test_analyze.py  test_fitting.py  test_gfp.py  test_integration_mne_sample.py  test_labels.py  test_peaks.py
