[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyarcparam"
version = "0.1.0"
description = "ArcParam — a shape-first reference implementation for ERP interpretation (Reading the Response Arc)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "James Croall", email = "jcroall@peakmind.health" }]
keywords = ["EEG", "ERP", "MNE", "EEGLAB", "GFP", "neuroscience", "arcparam"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "mne>=1.4",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/peak-mind-llc/pyarcparam"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "network: tests that download data (MNE sample dataset); deselect with -m 'not network'",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
